jgclark.Dashboard/src/react/css/SettingsDialog.css
/* CSS specific to Settings Dialog from jgclark.Dashboard plugin */
/* Last updated 2024-08-26 for v2.1.0.a9 by @jgclark */

/* Style for the settings dialog */
.settings-dialog {
    font-family: system-ui;
    /* background-color: var(--bg-main-color); */
    background-color: var(--bg-mid-color);
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 80%;
    max-width: 600px;
    border: none;
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
    /* z-index: 1000; */
    opacity: 1;
    transition: opacity 0.2s ease-out;
    overflow: hidden;

    /* Style for Section headings */
    .ui-heading {
        font-size: 130%;
        color: var(--tint-color);
        font-weight: 600;
        text-align: start;
        line-height: 140%;
        padding-top: 0.3rem;
        padding-bottom: 0.3rem;
    }

    /* Style for container for Items in a section */
    .ui-item {
        /* turning all off (had been top:0.3rem) to give flexibility elsewhere */
        padding: 0 0 0 0; 
    }

    /* Style for Item descriptions that follow the item */
    .item-description {
        font-size: small;
        color: var(--fg-alt-color);
        /* margin-bottom: 0.4rem; */
        /* opacity: 0.8; */
    }

    /* override default for hr */
    hr {
        border-color: var(--divider-color);
        border-width: 1px;
        margin: 0.5rem 0;
    }

    /* Style for the buttons */
    .PCButton {
        font-family: system-ui;
        padding: 2px 4px;
        border: none;
        border-radius: 4px;
        /* font-size: 14px; */
        transition: background-color 0.2s, box-shadow 0.2s;
        /* height: 30px; */
        /* Ensure buttons are centered vertically */
        align-self: center;
        cursor: pointer;
    }

    /* Style for the Cancel button */
    .cancel-button {
        background-color: var(--bg-main-color);
        color: var(--fg-main-color);
        border: 1px solid #ddd;
        outline: none;
        max-height: unset;
    }

    /* Darken Cancel button slightly on Hover */
    .cancel-button:hover {
        /* following is a bit of a hack from https://stackoverflow.com/a/31005080/3238281 */
        box-shadow: inset 0 0 0 50px rgba(0, 0, 0, 0.15);
    }

    /* Style for the inactive Save & Close button */
    .save-button-inactive {
        background-color: var(--tint-color);
        color: var(--bg-main-color);
        max-height: unset;
        opacity: 0.3;
        cursor: unset;
    }

    /* Style for the active Save & Close button */
    .save-button {
        background-color: var(--tint-color);
        color: var(--bg-main-color);
        max-height: unset;
    }

    /* Darken Save & Close button slightly on Hover */
    .save-button:hover {
        /* following is a bit of a hack from https://stackoverflow.com/a/31005080/3238281 */
        box-shadow: inset 0 0 0 50px rgba(0, 0, 0, 0.15);
    }

    /* Style for switch-line */
    .switch-line {
        display: flex;
        align-items: center;
        gap: 0.5rem;
        /* Left justify */
        justify-content: flex-start;
        /* little space above/below */
        padding: 0.1rem 0rem 0.3rem 0rem;
    }

    .switch-input {
        margin: 0;
    }

    .switch-label {
        font-weight: 500;
        color: var(--fg-alt-color);
        /* flex-shrink: 0; */
    }


    /* Style for input-box-container */
    .input-box-container {
        display: flex;
        flex-direction: column;
        align-items: left;
        /* width: 98%; */
    }

    /* Style for input-box-container (compact version) */
    .input-box-container-compact {
        display: grid;
        /* Show all label in one row, and rest of line to input box */
        grid-template-columns: [label] auto [input] 1fr;
        flex-direction: row;
        column-gap: 0.5rem;
        justify-content: start;
        align-items: center;
    }

    /* Turn off compact mode in narrower screens */
    @media screen and (width <= 700px) {
        .input-box-container-compact {
            display: block;
        }   
    }

    /* Style for input-box-wrapper */
    .input-box-wrapper {
        grid-area: input;
        align-items: end;
        /* gap: 10px; */
    }

    .input-box-label {
        font-weight: 500;
        color: var(--fg-alt-color);
        /* margin-bottom: 0.3rem; */
        grid-area: label;
    }

    .input-box-input {
        padding: 3px 6px 2px;
        border: 0.5px solid rgb(from var(--fg-main-color) r g b / 0.3);
        background-color: var(--bg-main-color);
        border-radius: 4px;
        font-family: system-ui;
        font-size: 0.85rem;
        /* vertical spacing above and below */
        margin: 0.3rem 0rem;
        margin: 0.2rem 0rem;
        /* fill rest of width in compact or normal mode */
        width: 100%;
    }

    /* Make number boxes a little narrower */
    .input-box-input-number {
        width: 6rem;
    }

    /* Style for read-only input box */
    .input-box-input:read-only {
        background-color: inherit;
    }

    /* Style for input box with invalid input */
    .input-box-input:invalid {
        border: 1px solid #faa;
    }

    /* Focus style for input-box-input */
    .input-box-input:focus {
        border-color: var(--hashtag-color);
        outline: none;
        box-shadow: 0 0 3px var(--hashtag-color);
    }

    /* For optional 'save' button on Input Box */
    .input-box-save {
        padding: 6px 12px;
        /* Reduce height to 75% */
        border: none;
        border-radius: 4px;
        background-color: var(--tint-color);
        color: var(--bg-main-color);
        cursor: pointer;
        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
        transition: background-color 0.3s, box-shadow 0.3s;
        height: 30px;
        /* Set height to 75% of the container height */
        align-self: center;
        /* Ensure buttons are centered vertically */
    }

    /* Disabled style for input-box-save */
    .input-box-save:disabled {
        background-color: #ccc;
        color: #aaa;
        cursor: not-allowed;
        box-shadow: none;
        display: none;
    }

    /* Hover style for enabled input-box-save */
    .input-box-save:not(:disabled):hover {
        background-color: #0056b3;
        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
    }

    /* Style for combobox-container */
    .combobox-container {
        display: flex;
        flex-direction: column;
    }

    /* Style for combobox-container (compact version) */
    .combobox-container-compact {
        display: flex;
        flex-direction: row;
        align-items: baseline;
        gap: 0.5rem;
        margin-bottom: 0.3rem;
    }

    .combobox-wrapper {
        display: flex;
        /* align-items: end; */
        gap: 10px;
        /* position: relative; */
        width: fit-content;
    }

    .combobox-label {
        font-weight: 500;
        color: var(--fg-alt-color);
        margin-right: 0.1rem;
    }

    .combobox-input {
        flex: 1;
        padding: 3px 6px 2px;
        background-color: var(--bg-main-color);
        border: 0.5px solid rgb(from var(--fg-main-color) r g b / 0.3);
        border-radius: 4px;
        font-family: system-ui;
        font-size: 0.9rem;
        /* width: 100%; */
        /* box-sizing: border-box; */
    }

    /* Focus style for combobox-input */
    .combobox-input:focus {
        border-color: var(--hashtag-color);
        outline: none;
        box-shadow: 0 0 3px var(--hashtag-color);
    }

    .combobox-arrow {
        position: absolute;
        right: 0.8rem;
        pointer-events: none;
        font-size: x-large;
        color: var(--tint-color);
        align-self: center;
    }

    .combobox-dropdown {
        position: absolute;
        top: 100%;
        left: 0;
        right: 0;
        border: 1px solid #ddd;
        border-radius: 4px;
        background-color: var(--bg-main-color);
        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
        z-index: 5;
    }

    .combobox-option {
        padding: 8px 12px;
        cursor: pointer;
        color: var(--fg-main-color);
        /* transition: background-color 0.2s; */
    }

    /* Hover style for combobox option */
    .combobox-option:hover {
        background-color: var(--bg-alt-color);
        color: var(--fg-alt-color);
    }

    .settings-dialog-header {
        font-size: large;
        font-weight: 600;
        color: var(--tint-color);
        margin: 0;
        background: none;
        /* Match the height of the buttons container */
        line-height: 40px;
    }
}

/* Ensure the settings dialog content is hidden when closed */
.settings-dialog-content {
    display: flex;
    flex-direction: column;
    gap: 0.5rem; /* down from 1rem to give more control elsewhere */
    background-color: var(--bg-mid-color);
    padding: 0.75rem 1.25rem;
    border-radius: 8px;
    overflow-y: auto;
    max-height: 85vh;
}

/* Show the settings dialog with transition */
.settings-dialog[open] {
    opacity: 1;
}

/* Style for the dialog buttons container (header area) */
.settings-dialog-header {
    display: flex;
    /* vertically align items in the centre */
    align-items: center;
    justify-content: space-between;
    padding: 0.3rem;
    border-bottom: 1px solid #ddd;
    background-color: var(--bg-alt-color);
    /* Adjusted height for better visibility */
    /* height: 40px; */
}

.settings-dialog-title {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    font-size: large;
    font-weight: 600;
    color: var(--tint-color);
    text-align: center;
    /* Match the height of the buttons container */
    line-height: 40px;
}

/* Heading style for settings dialog */
.settings-dialog-heading {
    font-size: large;
    font-weight: 500;
    color: var(--tint-color);
    padding-top: 0.3rem;
    padding-bottom: 0.2rem;
}

/* Make disabled settings lower opacity */
.disabled {
    opacity: 0.6;
}

/* Make settings that depend on another slightly indented */
.indent {
    margin-left: 1rem;
}

/* iOS-specific settings */
.iOS .settings-dialog .settings-dialog-header {
    font-size: 1rem;
    line-height: 1rem;
}

